# Ba-Chan-Script

./: .gitignore  README.md  inspect_flet.py  main.py  pyproject.toml  reproduce_issue.py
app/: __init__.py  audio_utils.py  routes.py  whisper_engine.py
app/static/: app.js  pcm-recorder.worklet.js
app/templates/: index.html
src/: main.py
src/app/: audio_utils.py  flet_logic.py  whisper_engine.py
src/app/ui/: file_tab.py  recorder_tab.py  settings_tab.py
