[project]
name = "whisper-transcription-app"
version = "0.1.0"
description = "Faster-Whisper文字起こしWebアプリ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=11.0.0",
    "faster-whisper>=1.2.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "python-multipart>=0.0.20",
]
