[project]
name = "ba-chan-script"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet>=0.80.5",
  "faster-whisper>=1.2.1",
  "sounddevice>=0.5.5",
  "numpy>=2.4.2",
  "av>=16.1.0",
  "noisereduce>=3.0.0",
  "scipy>=1.17.0",
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.0",
]

[tool.flet]
org = "com.mycompany"
product = "ba-chan-script"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"